--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,12 @@
     <groupId>groupId</groupId>
     <artifactId>Schedule</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>war</packaging>
+    <modules>
+        <module>daolayer</module>
+        <module>model</module>
+        <module>web</module>
+    </modules>
+    <packaging>pom</packaging>
     <name>Schedule</name>
     <url>http://maven.apache.org</url>
 
@@ -109,6 +114,7 @@
             <artifactId>javax.el</artifactId>
             <version>2.2.4</version>
         </dependency>
+
     </dependencies>
 
 
